# palautusrepositorio_ohjtuot

./: README.md
nhl-statistics-1/src/: index.py  statistics_service.py
osa2/poetry-web/: pyproject.toml
