[tool.poetry]
name = "poetry-web"
version = "0.1.0"
description = ""
authors = ["Topias Liljegren <topias.liljegren@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
